--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,3 @@
-backend_url =https://u22057029-3030.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url=https://sentianalyzer.1irls8qz3o33.us-south.codeengine.appdomain.cloud
+backend_url ='https://u22057029-3030.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai'
+sentiment_analyzer_url'=https://sentianalyzer.1irls8qz3o33.us-south.codeengine.appdomain.cloud'
+searchcars_url='https://sergiogr2001-3050.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai'
